log
Thu 16 May 2024 10:11:55 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
076576e
Sat 18 May 2024 02:06:26 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:82:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   82 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
b7afb40
Sat 18 May 2024 02:08:53 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
891fc44
Sat 18 May 2024 02:09:52 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:39: error: expected ‘)’ before ‘valor’
   61 |                   Node *valor = copy(n
      |                                     ~ ^
      |                                       )
   62 |                   valor++;
      |                   ~~~~~                
sudoku.c:64:16: error: expected ‘,’ or ‘;’ before ‘}’ token
   64 |                }
      |                ^
sudoku.c:61:25: error: unused variable ‘valor’ [-Werror=unused-variable]
   61 |                   Node *valor = copy(n
      |                         ^~~~~
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dd8356b
Sat 18 May 2024 02:10:12 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c4d22fc
Sat 18 May 2024 02:10:47 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
64e15ef
Sat 18 May 2024 02:15:38 AM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
34fd874
Sat 18 May 2024 02:17:47 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6f25ff6
Sat 18 May 2024 02:20:48 AM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
4eb4c0f
Sat 18 May 2024 02:21:13 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b21f455
Sat 18 May 2024 02:21:50 AM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
e9d6322
Sat 18 May 2024 02:27:33 AM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9ec2c01
Sat 18 May 2024 02:32:28 AM UTC: 
 sudoku.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
4a80cc0
Sat 18 May 2024 02:33:07 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3f67f7e
Sat 18 May 2024 02:37:09 AM UTC: 
 sudoku.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
9754a0b
Sat 18 May 2024 02:47:55 AM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  3|3
total_score: 25/70
9611b71
Sat 18 May 2024 09:32:10 PM UTC: 
 sudoku.c | 63 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 62 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘EstaRepetidoC’:
sudoku.c:68:25: error: expected identifier before ‘[’ token
   68 |                if (aux->[i][col] == aux->sudo[j][col])
      |                         ^
Compilation failed
8c2ead3
Sat 18 May 2024 09:32:50 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
76cee3d
Sat 18 May 2024 09:35:13 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
741c34b
Sat 18 May 2024 09:44:27 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
1db5df3
Sat 18 May 2024 09:48:57 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
d0c26e1
Sat 18 May 2024 09:50:28 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
b5de239
Sat 18 May 2024 10:07:53 PM UTC: 
 sudoku.c | 24 ++++++++++++++++++++----
 1 file changed, 20 insertions(+), 4 deletions(-)
 tests:  3|3
total_score: 25/70
288f989
Sat 18 May 2024 10:08:16 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|3
total_score: 25/70
ab50b24
Sat 18 May 2024 10:10:06 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  3|3
total_score: 25/70
b0c1681
Sat 18 May 2024 10:13:20 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
855241a
Sat 18 May 2024 10:22:52 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
a9241d6
Sat 18 May 2024 10:30:17 PM UTC: 
 sudoku.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
15a6b6f
Sat 18 May 2024 10:32:41 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|3
total_score: 25/70
6b4c2a4
Sat 18 May 2024 10:36:47 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|3
total_score: 25/70
ddc4cb4
Sat 18 May 2024 10:38:50 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
88365b4
Sat 18 May 2024 10:42:03 PM UTC: 
 sudoku.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  3|3
total_score: 25/70
dd0556b
Sat 18 May 2024 10:42:23 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
fc36c3e
Sat 18 May 2024 10:46:11 PM UTC: 
 sudoku.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  3|3
total_score: 25/70
584d267
Sat 18 May 2024 10:46:49 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
4ec177d
Sat 18 May 2024 10:47:17 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  3|3
total_score: 25/70
57bac50
Sat 18 May 2024 10:47:39 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
c50df9a
